--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,21 @@
+<!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="../assets/stylesheets/style.css">
-	<title></title>
+	<title>Search</title>
+	<link rel="stylesheet" type="text/css" href="../assets/stylesheets/search_style.css">
 </head>
 <body>
 <div id="header">
 	<div id="heading">
 		<h1>
-			<a href="index.html">MIT SEARCH</a>
+			<a href="index.html">FACULTY SEARCH</a>
 		</h1>
 	</div>
 </div>
-<div id="main_body">
-	<img src="gear_1.png" id="gear1">
-	<img src="small_gear.png" id="small_gear">
-	<img src="gear_1.png" id="gear1_2">
-	<img src="paper.png" id="paper">
-	<img src="comp.png" id="comp">
-	<div id="button_div">
-		<a href="search.html"><button name="search" id="search_button">Start Searching</button></a>
-	</div>
-</div>
+<div id="search_h"><h1>search</h1></div>
+<form method="POST" action="search.php">
+	<input type="text" name="search_query" required id="input_text">
+	<br><input type="submit" name="submit" value="GO">
+</form>
 </body>
 </html>
